<resources>
    <string name="app_name">Калькулятор</string>
    <string name="app_version">версия 3</string>

    <string name="btn_divide">÷</string>
    <string name="btn_multiply">×</string>
    <string name="btn_minus">-</string>
    <string name="btn_plus">+</string>
    <string name="btn_clear">Очистить</string>
    <string name="btn_equal">=</string>

    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_zero">0</string>

    <string name="exit">Выход</string>
    <string name="reset">Сброс</string>

    <string name="tv_result">Результат</string>
    <string name="et_input">Ввод</string>

</resources>