<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/linearLayoutInputOperand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_actionbar"
        app:layout_constraintVertical_bias="0.2">

        <EditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:textColor="@color/black"
            android:hint="@string/et_input"
            android:textSize="@dimen/text_size_main"/>

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:hint="@string/tv_result"
            android:textSize="@dimen/text_size_main" />

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutInputOperand"
        app:layout_constraintVertical_bias="0.3"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <Button
            android:id="@+id/btn_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/btn_one"
            android:textSize="@dimen/text_size_main" />

        <Button
            android:id="@+id/btn_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/btn_two"
            android:textSize="@dimen/text_size_main" />

        <Button
            android:id="@+id/btn_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/btn_three"
            android:textSize="@dimen/text_size_main" />

        <Button
            android:id="@+id/btn_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/btn_four"
            android:textSize="@dimen/text_size_main" />

        <Button
            android:id="@+id/btn_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/btn_five"
            android:textSize="@dimen/text_size_main" />

        <Button
            android:id="@+id/btn_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/btn_six"
            android:textSize="@dimen/text_size_main" />

        <Button
            android:id="@+id/btn_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/btn_seven"
            android:textSize="@dimen/text_size_main" />

        <Button
            android:id="@+id/btn_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/btn_eight"
            android:textSize="@dimen/text_size_main" />

        <Button
            android:id="@+id/btn_nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/btn_nine"
            android:textSize="@dimen/text_size_main" />


        <Button
            android:id="@+id/btn_zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/btn_zero"
            android:textSize="@dimen/text_size_main" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowSpan="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/btn_margin"
            android:backgroundTint="@color/secondary_color"
            android:text="@string/btn_plus"
            android:textSize="@dimen/text_size_main" />


        <Button
            android:id="@+id/btn_equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowSpan="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/btn_margin"
            android:backgroundTint="@color/accent_color"
            android:text="@string/btn_equal"
            android:textSize="@dimen/text_size_main" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/btn_margin"
            android:backgroundTint="@color/secondary_color"
            android:text="@string/btn_minus"
            android:textSize="@dimen/text_size_main" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/btn_margin"
            android:backgroundTint="@color/secondary_color"
            android:text="@string/btn_multiply"
            android:textSize="@dimen/text_size_main" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/btn_margin"
            android:backgroundTint="@color/secondary_color"
            android:text="@string/btn_divide"
            android:textSize="@dimen/text_size_main" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/btn_margin"
            android:backgroundTint="@color/secondary_color"
            android:text="@string/btn_clear"
            android:textSize="@dimen/text_size_main" />


    </GridLayout>

    <LinearLayout
        android:id="@+id/linearLayoutChoiceOperator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutInputOperand"
        app:layout_constraintVertical_bias="0.1">


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>